--- a/recipe-minisite/styles.css
+++ b/recipe-minisite/styles.css
@@ -1,4 +1,5 @@
-  body {
+<link rel="stylesheet" href="styles.css" media="all">
+body {
       background-color: ivory;
     }
 			    p {
@@ -10,3 +11,4 @@
 		    ol {
       line-height: 1.5;
     }
+
