--- a/recipe-minisite/styles.css
+++ b/recipe-minisite/styles.css
@@ -16,8 +16,8 @@ body {
 /* define variables */
 :root {
     --nav-height: 3rem;
-    --nav-bkgd-color: gray;
-    --nav-text-color: white;
+    --nav-bkgd-color: darkturquoise;
+    --nav-text-color: black;
     --nav-hover-bkgd-color: lightgray;
     --nav-hover-text-color: black;
 }
@@ -162,6 +162,7 @@ nav>ul>li>ul>li:hover a {
     }
 
 }
+
 
 
 
