--- a/dark-flower/styles.css
+++ b/dark-flower/styles.css
@@ -7,6 +7,13 @@ body.darkMode {
     color: azure;
 }
 
-body.darkMode h1,h2 {
+body.darkMode h1 {
     color: azure;
 }
+body.darkMode h2 {
+    color: azure;
+}
+body.darkMode h3 {
+    color: azure;
+}
+
