--- a/long-story/styles.css
+++ b/long-story/styles.css
@@ -68,8 +68,9 @@ section > .instructions {
 }
 
 /* change the color in the last section due to the background image */
-#section1, #section2, #section3, #section4, #section5 p {
+#section1 p, #section2 p, #section3 p, #section4 p, #section5 p {
     background-color: #cfddebbb;
+
 
 
 
