--- a/long-story/styles.css
+++ b/long-story/styles.css
@@ -35,7 +35,7 @@ section > .content {
     position: absolute;
     width: 42vw;
     top: 20vh;
-    right: 4vw;
+    left: 4vw;
 }
 
 /* paragraph tags are given a size and padding */
@@ -49,12 +49,12 @@ section > .instructions {
     position: absolute;
     bottom: 2vh;
     width: 42vw;
-    right: 4vw;
+    left: 4vw;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 1rem;
     color: #000;
-    padding-left: 1rem; /* to align with paragraphs */
+    padding-right: 1rem; /* to align with paragraphs */
 }
 
 
@@ -63,13 +63,14 @@ section > .instructions {
     font-size: 7rem;
     line-height: 6rem;
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: -0.4rem; /* due to the size and design of the font, bump it left a tiny bit for visual alignment */
-    padding-left: 1rem; /* to align with paragraphs */
+    margin-right: -0.4rem; /* due to the size and design of the font, bump it left a tiny bit for visual alignment */
+    padding-right: 1rem; /* to align with paragraphs */
 }
 
 /* change the color in the last section due to the background image */
-#section1 p, #section2 p, #section3 p, #section4 p, #section5 p {
+#section1 p, #section1 h1, #section2 p, #section3 p, #section4 p, #section5 p {
     background-color: #cfddebbb;
+
 
 
 
