--- a/majorproject/styles.css
+++ b/majorproject/styles.css
@@ -1,6 +1,25 @@
 body {
   font-family: "Grenze", serif;
 }
+html {
+  font-size: 20px; /* Sets the root font size */
+}
+
+h1 {
+  font-size: 2.5rem; /* 2.5 * 16 = 40px */
+}
+
+h2 {
+  font-size: 1.875rem; /* 1.875 * 16 = 30px */
+}
+
+h3 {
+  font-size: 1.5rem; /* 1.875 * 16 = 30px */
+}
+
+p {
+  font-size: 1rem; /* 1 * 16 = 16px */
+}
 /* CSS for responsive menu demo */
 
 /* define variables */
@@ -259,5 +278,6 @@ nav>ul>li>ul>li:hover a {
   font-weight: 900;
   font-style: italic;
 }
+
 
 
