--- a/majorproject/styles.css
+++ b/majorproject/styles.css
@@ -26,8 +26,8 @@ p {
 /* define variables */
 :root {
     --nav-height: 3rem;
-    --nav-bkgd-color: gray;
-    --nav-text-color: white;
+    --nav-bkgd-color: #67AFCB;
+    --nav-text-color: black;
     --nav-hover-bkgd-color: lightgray;
     --nav-hover-text-color: black;
 }
@@ -279,6 +279,7 @@ nav>ul>li>ul>li:hover a {
   font-weight: 900;
   font-style: italic;
 }
+
 
 
 
