--- a/majorproject/styles.css
+++ b/majorproject/styles.css
@@ -26,10 +26,8 @@ p {
 /* define variables */
 :root {
     --nav-height: 3rem;
-    --nav-bkgd-color: #67AFCB;
-    --nav-text-color: black;
-    --nav-hover-bkgd-color: lightgray;
-    --nav-hover-text-color: black;
+    --nav-bkgd-color: #347B98;
+    --nav-text-color: #E4F1F6;
 }
 
 * {
@@ -279,6 +277,7 @@ nav>ul>li>ul>li:hover a {
   font-weight: 900;
   font-style: italic;
 }
+
 
 
 
