--- a/majorproject/styles.css
+++ b/majorproject/styles.css
@@ -28,6 +28,8 @@ p {
     --nav-height: 3rem;
     --nav-bkgd-color: #347B98;
     --nav-text-color: #E4F1F6;
+    --nav-hover-bkgd-color: #347B98;
+    --nav-hover-text-color: #E4F1F6;
 }
 
 * {
@@ -277,6 +279,7 @@ nav>ul>li>ul>li:hover a {
   font-weight: 900;
   font-style: italic;
 }
+
 
 
 
