--- a/majorproject/styles.css
+++ b/majorproject/styles.css
@@ -1,6 +1,9 @@
 body {
   font-family: "Grenze", serif;
   background-color: #E4F1F6;
+   margin-bottom: 40px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 html {
   font-size: 18px; /* Sets the root font size */
@@ -289,6 +292,7 @@ nav>ul>li>ul>li:hover a {
   font-weight: 900;
   font-style: italic;
 }
+
 
 
 
