--- a/majorproject/styles.css
+++ b/majorproject/styles.css
@@ -5,6 +5,11 @@ body {
   margin-right: 50px;
   margin-left: 50px;
 }
+div {
+  margin-bottom: 50px;
+  margin-right: 50px;
+  margin-left: 50px;
+}
 html {
   font-size: 18px; /* Sets the root font size */
 }
@@ -292,6 +297,7 @@ nav>ul>li>ul>li:hover a {
   font-weight: 900;
   font-style: italic;
 }
+
 
 
 
