--- a/majorproject/styles.css
+++ b/majorproject/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Grenze", sans-serif;
+  font-family: "Grenze", serif;
   background-color: #E4F1F6;
    margin-bottom: 15px;
   margin-right: 15px;
@@ -299,6 +299,7 @@ nav>ul>li>ul>li:hover a {
   font-weight: 900;
   font-style: italic;
 }
+
 
 
 
