--- a/majorproject/styles.css
+++ b/majorproject/styles.css
@@ -192,131 +192,110 @@ nav>ul>li>ul>li:hover a {
     }
 
 }
-.grenze-thin {
-  font-family: "Grenze", serif;
+.fira-sans-thin {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 100;
   font-style: normal;
 }
 
-.grenze-extralight {
-  font-family: "Grenze", serif;
+.fira-sans-extralight {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 200;
   font-style: normal;
 }
 
-.grenze-light {
-  font-family: "Grenze", serif;
+.fira-sans-light {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 300;
   font-style: normal;
 }
 
-.grenze-regular {
-  font-family: "Grenze", serif;
+.fira-sans-regular {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-.grenze-medium {
-  font-family: "Grenze", serif;
+.fira-sans-medium {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 500;
   font-style: normal;
 }
 
-.grenze-semibold {
-  font-family: "Grenze", serif;
+.fira-sans-semibold {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 600;
   font-style: normal;
 }
 
-.grenze-bold {
-  font-family: "Grenze", serif;
+.fira-sans-bold {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 700;
   font-style: normal;
 }
 
-.grenze-extrabold {
-  font-family: "Grenze", serif;
+.fira-sans-extrabold {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 800;
   font-style: normal;
 }
 
-.grenze-black {
-  font-family: "Grenze", serif;
+.fira-sans-black {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 900;
   font-style: normal;
 }
 
-.grenze-thin-italic {
-  font-family: "Grenze", serif;
+.fira-sans-thin-italic {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 100;
   font-style: italic;
 }
 
-.grenze-extralight-italic {
-  font-family: "Grenze", serif;
+.fira-sans-extralight-italic {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 200;
   font-style: italic;
 }
 
-.grenze-light-italic {
-  font-family: "Grenze", serif;
+.fira-sans-light-italic {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 300;
   font-style: italic;
 }
 
-.grenze-regular-italic {
-  font-family: "Grenze", serif;
+.fira-sans-regular-italic {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 400;
   font-style: italic;
 }
 
-.grenze-medium-italic {
-  font-family: "Grenze", serif;
+.fira-sans-medium-italic {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 500;
   font-style: italic;
 }
 
-.grenze-semibold-italic {
-  font-family: "Grenze", serif;
+.fira-sans-semibold-italic {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 600;
   font-style: italic;
 }
 
-.grenze-bold-italic {
-  font-family: "Grenze", serif;
+.fira-sans-bold-italic {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 700;
   font-style: italic;
 }
 
-.grenze-extrabold-italic {
-  font-family: "Grenze", serif;
+.fira-sans-extrabold-italic {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 800;
   font-style: italic;
 }
 
-.grenze-black-italic {
-  font-family: "Grenze", serif;
+.fira-sans-black-italic {
+  font-family: "Fira Sans", sans-serif;
   font-weight: 900;
   font-style: italic;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
