--- a/majorproject/styles.css
+++ b/majorproject/styles.css
@@ -93,6 +93,7 @@ nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
+  line-height: 1;
 }
 
 nav>ul {
@@ -307,6 +308,7 @@ nav>ul>li>ul>li:hover a {
   font-weight: 900;
   font-style: italic;
 }
+
 
 
 
