--- a/majorproject/styles.css
+++ b/majorproject/styles.css
@@ -2,8 +2,8 @@ body {
   font-family: "Fira Sans", sans-serif;
   background-color: #E4F1F6;
 }
-div {
-  margin-bottom: 25px;
+
+p, h1, h2, h3, div {
   margin-right: 25px;
   margin-left: 25px;
 }
@@ -305,6 +305,7 @@ nav>ul>li>ul>li:hover a {
   font-weight: 900;
   font-style: italic;
 }
+
 
 
 
