--- a/majorproject/styles.css
+++ b/majorproject/styles.css
@@ -34,6 +34,8 @@ footer {
   text-align: center;
   padding: 3px;
   margin-top: 50px;
+  margin-left: 0;
+  margin-right: 0;
   background-color: #347B98;
   color: #E4F1F6;
   a {
@@ -300,6 +302,7 @@ nav>ul>li>ul>li:hover a {
   font-weight: 900;
   font-style: italic;
 }
+
 
 
 
